--- a/web_client/template/ads3.html
+++ b/web_client/template/ads3.html
@@ -30,36 +30,36 @@
                 <div class="grid-container">
                     <div class="grid-item">
                         <p><b>STEP-01: INSERT 40</b></p>
-                        <img src="../../assets/data/DSAAT/step1.png" alt="">
+                        <img src="../../assets/data/ADS/step1.png" alt="">
                         <p style="text-align: center;">Fig. Inserted 40</p>
                     </div>
                     
                     <div class="grid-item">
                         <p>STEP-02: INSERT 20</p>
-                        <img src="../../assets/data/DSAAT/step2.png" alt="">
+                        <img src="../../assets/data/ADS/step2.png" alt="">
                         <p style="text-align: center;">Fig. Inserted 20</p>
                     </div>
                     <div class="grid-item">
                         <p style="text-align: center;">STEP-03(A): INSERT 10</p>
-                        <img src="../../assets/data/DSAAT/step3.png" alt="">
+                        <img src="../../assets/data/ADS/step3.png" alt="">
                         <p style="text-align: center;">Fig. Inserted 10</p>
                         <p>As soon as we insert 10, the tree becomes imbalanced due to LL-insertion, therefore perform a LL rotation about the
                             key value 40.</p>
                     </div>
                     <div class="grid-item">
                         <p>STEP-03(B): Balanced AVL after inserting 10</p>
-                        <img src="../../assets/data/DSAAT/step3b.png" alt="">
+                        <img src="../../assets/data/ADS/step3b.png" alt="">
                         <p style="text-align: center;">Fig. Balanced after Inserting 10</p>
                     </div>
                     <div class="grid-item">
                         <p style="text-align: center;">STEP-04: INSERT 25</p>
-                        <img src="../../assets/data/DSAAT/step4.png" alt="">
+                        <img src="../../assets/data/ADS/step4.png" alt="">
                         <p style="text-align: center;">Fig. Inserted 25</p>
                     </div>
         
                     <div class="grid-item">
                         <p style="text-align: center;">STEP-05(A): INSERT 30</p>
-                        <img src="../../assets/data/DSAAT/step5a.png" alt="">
+                        <img src="../../assets/data/ADS/step5a.png" alt="">
                         <p style="text-align: center;">Fig. Inserted 30.</p>
                         <p>On inserting 30, keys 40 as well as 20 becomes imbalanced</p>
                         <p><b>NOTE: </b>Whenever two nodes become imbalanced, we start form the node which we inserted and go upwards
@@ -67,30 +67,30 @@
                     </div>
                     <div class="grid-item">
                         <p style="text-align: center;">STEP-05(B): Balanced AVL after inserting 30</p>
-                        <img src="../../assets/data/DSAAT/step5b.png" alt="">
+                        <img src="../../assets/data/ADS/step5b.png" alt="">
                         <p style="text-align: center;">Fig. Balanced after Inserting 30</p>
                     </div>
                     <div class="grid-item">
                         <p style="text-align: center;">STEP-06(A): INSERT 22</p>
-                        <img src="../../assets/data/DSAAT/step6.png" alt="">
+                        <img src="../../assets/data/ADS/step6.png" alt="">
                         <p style="text-align: center;">Fig. Inserted 22.</p>
                         <p>The root node becomes imbalanced, due to insertion in RLL, so do we have to perform a RLL rotation? Nope.
                             We always consider the 1st two of all the notations, therefore we perform RL rotation.</p>
                     </div>
                     <div class="grid-item">
                         <p style="text-align: center;">STEP-06(B): Balanced AVL after inserting 22</p>
-                        <img src="../../assets/data/DSAAT/step6b.png" alt="">
+                        <img src="../../assets/data/ADS/step6b.png" alt="">
                         <p style="text-align: center;">Fig. Balanced after Inserting 22.</p>
                     </div>
                     <div class="grid-item">
                         <p style="text-align: center;">STEP-07(A): INSERTING 50</p>
-                        <img src="../../assets/data/DSAAT/step7.png" alt="">
+                        <img src="../../assets/data/ADS/step7.png" alt="">
                         <p style="text-align: center;">Fig. Inserted 50.</p>
                         <p>This imbalanced tree can be balanced by an RR rotation about the key value 30.</p>
                     </div>
                     <div class="grid-item">
                         <p style="text-align: center;">STEP-07(B): Balanced AVL after inserting 50</p>
-                        <img src="../../assets/data/DSAAT/step7b.png" alt="">
+                        <img src="../../assets/data/ADS/step7b.png" alt="">
                         <p style="text-align: center;">Fig. Balanced after Inserting 50</p>
                     </div>
                     <div class="grid-item">
