--- a/web_client/template/dsaat.html
+++ b/web_client/template/dsaat.html
@@ -5,168 +5,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="content.css">
-    <link rel="stylesheet" href="../utils.css">
+    <link rel="stylesheet" href="../../utils.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>DSAAT</title>
+    <title>DSAAT-1</title>
 </head>
 <body>
 
       <section style="margin-left: auto; margin-right: auto;">
-        <div id="title-bg" style="--bg-img: url('/../assets/images/Screenshot 2021-12-29 201040.jpg') ">
+        <div id="title-bg" style="--bg-img: url('../../assets/images/dsaat.jpg') ">
             <div class="title-content">
                 <p id="title">Discrete Structures and Automata Theory</p>
                 <p id="stmt" style="color: #C185FE;">Automata Theory Limitations and Applications</p>
-                <p>Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a<br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard</p>
+                <p>The term "automata" comes from the Greek  "αὐτόματα"<br>
+                    meaning "self-acting". An automaton (plural of Automata)<br>
+                    is an abstract, self-propelled computing device<br>
+                    that automatically performs a given set of tasks.</p>
             </div>
           </div>
       </section>
 
-      <section style="margin-left: auto; margin-right: auto;">
-        <div class="grid-container">
             <div class="grid-item">
-                <h1 style="color: #C185FE; text-align: center; margin: 50px; font-size: 30px;">What is Lorem
-                    Ipsum?</h1>
+                <h1 style="color: #C185FE; text-align: center; margin-top: 50px; font-size: 30px;">Introduction</h1>
                     <p>
-                        Contrary to popular belief, Lorem Ipsum is <br>
-                        not simply random text. It has roots in a <br>
-                        piece of classical Latin literature from 45 <br>
-                        BC, making it over 2000 years old. Richard <br>
-                        McClintock, a Latin professor at Hampden- <br>
-                        Sydney College in Virginia, looked up one of <br>
-                        the more obscure Latin words, consectetur, <br>
-                        from a Lorem Ipsum passage, and going <br>
-                        through the cites of the word in classical <br>
-                        literature, discovered the undoubtable <br>
-                        source.
+                        Automata theory is essentially about studying various mechanisms for producing and recognizing language. 
+                        Automata theory is basically useful for studying different types of grammar and automata. 
+                        Grammar is a mechanism for generating sentences in a language. 
+                        Automata are language recognition mechanisms. 
+                        Automata theory is mainly used to study the 
+                        relationship between various types of automata as speech recognition devices and their grammar.
                     </p>
+                    <p>Automata theory deals with the definitions and properties of mathematical computational models.
+                        <ul style="list-style-type: disc;">
+                            <li>Finite-state machines are used in word processing, compilers, and hardware design.</li>
+                            <li>Context-free grammar is used in programming languages and artificial intelligence.</li>
+                            <li>Turing machines represent computable functions.</li>
+                        </ul>
+                    </p>
+                    <h1 style="color: #C185FE; text-align: center; margin-top: 50px; font-size: 30px;">Families of Automata</h1>
+                    <p>There are four major families of automaton :</p>
+                    <ol>
+                        <li>Finite-state machine.</li>
+                        <li>Pushdown automata.</li>
+                        <li>Turing machine.</li>
+                        <li>Linear-bounded automata.</li>
+                    </ol>
             </div>
             <div class="grid-item">
-                <img src="\assets\images\color and font.png" alt="">
+                <h1 style="color: #C185FE; text-align: center; font-size: 30px;">Finite-State Machine (FSM)</h1>
+                <p>Finite-state machines are an ideal computational model for  small amounts of memory and do not maintain memory. 
+                    This mathematical model of the machine can only reach a finite number of states and transitions between these states. 
+                    Its main use is in mathematical problem analysis. 
+                    Finite-state machines are also used for purposes other than general computation, 
+                    such as recognizing regular languages.</p>
             </div>
-            <div class="grid-item"><p>
-                Contrary to popular belief, Lorem Ipsum is<br>
-                not simply random text. It has roots in a <br>
-                piece of classical Latin literature from 45<br>
-                BC, making it over 2000 years old. Richard<br>
-                McClintock, a Latin professor at Hampden-<br>
-                Sydney College in Virginia, looked up one of<br>
-                the more obscure Latin words, consectetur,<br>
-                from a Lorem Ipsum passage, and going<br>
-                through the cites of the word in classical<br>
-                literature, discovered the undoubtable<br>
-                source.
-            </p></div>
+
             <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
+                <h1 style="color: #C185FE; text-align: center; font-size: 30px;">Pushdown Automata</h1>
+                <p>Pushdown automata allow context-free languages with a set of plain languages. 
+                    A language that describes a string with matching parentheses is a language without a context. 
+                    Let's say a programmer has written some code, 
+                    and all parentheses must match for the code to be valid. One way to do this is to pass code (in string form) 
+                    to a down-push automaton that is programmed with a jump function that implements a 
+                    context-free grammar for the  balanced bracket language.</p>
             </div>
+
             <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
+                <h1 style="color: #C185FE; text-align: center; font-size: 30px;">Linear-bounded Automata</h1>
+                <p>A linear bounded automaton (lba) is essentially a Turing machine whose computation is limited by the amount of tape to which the input is written. 
+                    You can think of it as consisting of a finite set of states, 
+                    a finite alphabet (with special right and left end markers [ and ]), 
+                    a specified initial state, and a finite set of instructions in the form of a Turing's quad. machine.</p>
             </div>
+            
             <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
+                <h1 style="color: #C185FE; text-align: center; font-size: 30px;">Turing Machine</h1>
+                <p>A Turing Machine(TM) is a mathematical model consisting of an infinite length tape divided into cells that receive input data. 
+                    It consists of a head that reads the input tape. The status register stores the state of the Turing machine. 
+                    After reading the entered character, it is replaced by another character, 
+                    its internal state is changed, and it moves  right or left in one cell. 
+                    When the TM reaches its final state, the input string is accepted, otherwise it is rejected.</p>
             </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-          </div> 
-      </section>
 
 
       <div class="container">
@@ -175,9 +94,8 @@
           <li class="icon">
             <a href="#"><span class="fa fa-angle-left"></span>Previous</a>
           </li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
+          <li><a href="dsaat.html">1</a></li>
+          <li><a href="dsaat2.html">2</a></li>
           <li class="icon">
             <a href="#">Next<span class="fa fa-angle-right"></span></a>
           </li>
